# mssql_audit_logger

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
src/: main.rs
