[package]
name = "mssql_audit_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-native-tls"] }
tiberius = { version = "0.12", features = ["chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
